updated jwt auth and ai docker setup